<?xml version="1.0"?>
<package format="3">
  <name>148_gestures</name>
  <version>0.0.1</version>
  <description>Gesture recognition using DepthAI and ROS2 for RC car control</description>
  <maintainer email="hdemendoza@ucsd.edu">root</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

